--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,5 @@ body {
     padding-top: 40px;
     padding-bottom: 40px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
