create footer for contact us info

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,24 @@
-<p>footer works!</p>
+ <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="row text-center">
+      <div class="col-md-6 text-center">
+        <div>
+            <img src="../../assets/pizza-app-logo.png" style="width:30%" />
+        </div>
+      </div>
+      <div class="col-md-6 text-left" style="padding-top:2%">
+        <h5>Contact Us here:</h5>
+        <dl class="contact-list">
+            <dt>Address:</dt>
+            <dd>798 South Park Avenue, Munich, Germany</dd>
+        </dl>
+        <dl class="contact-list">
+            <dt>Email:</dt>
+            <dd><a href="mailto:#">support@pizzaandmore.com</a></dd>
+        </dl>
+        <dl class="contact-list">
+            <dt>Phone:</dt>
+            <dd><a href="tel:#">+49 131 - 122 - 1212</a></dd>
+        </dl>
+      </div>
+    </div>
+  </footer>
