--- a/src/app/components/cart-view/cart-view.component.html
+++ b/src/app/components/cart-view/cart-view.component.html
@@ -58,6 +58,10 @@
                     Please provide a valid name.
                 </div>
             </div>
+             <div class="form-group">
+                <label for="recipient-address" style="display:flex!important;" class="form-label">Address</label>
+                <input type="text" class="form-control" id="recipient-address" (change)="updateAddress($event.target.value)" required>
+            </div>
             <div class="form-group">
                 <label for="recipient-email" style="display:flex!important;" class="form-label">Email</label>
                 <input type="email" class="form-control" id="recipient-email" (change)="updateEmail($event.target.value)" required>
@@ -78,6 +82,7 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" (click)="onCompleteOrder()"class="btn btn-primary">Order Now</button>
       </div>
+    <ngx-spinner></ngx-spinner>
     </div>
   </div>
 </div>
