change footer email

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,7 +13,7 @@
         </dl>
         <dl class="contact-list">
             <dt>Email:</dt>
-            <dd><a href="mailto:#">support@pizzaandmore.com</a></dd>
+            <dd><a href="mailto:#">pizzaandmoreforyou@gmail.com</a></dd>
         </dl>
         <dl class="contact-list">
             <dt>Phone:</dt>
